# oxy-zen

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  SECURITY_REVIEW.md  TODO.md  build.spec  main.py  pyproject.toml  version_info.txt
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
data/: exercises.yaml
scripts/: build.bat  check_coverage.py  kill.bat  release.ps1  start.bat  start.vbs
src/: __init__.py  app.py  config.py  constants.py  logging_config.py  security.py
src/managers/: README.md  __init__.py  icon_manager.py  notification_manager.py  schedule_manager.py
src/ui/: __init__.py  base_window.py  checkin_window.py  notification_config_window.py  stats_window.py
tests/: README.md  __init__.py  conftest.py  test_app.py  test_app_extended.py  test_atomic_config_write.py  test_config.py  test_integration.py  test_notification_config_window.py  test_notifications.py  test_schedule.py  test_security.py  test_system_tray.py  test_thread_safety.py  test_threads.py  test_ui.py
